--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,12 +6,16 @@
   <title>Log Reader</title>
 </script>
 </head>
-
 <body>
   <header>
     <h1>Log Reader</h1>
   </header>
   <%= yield %>
+
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.3.3/underscore-min.js" type="text/javascript"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.2/backbone-min.js" type="text/javascript"></script>
+  <script type="text/javascript" src="/js/app.js"></script>
 </body>
 
 </html>
