--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,12 @@
-<div class="app_container">
-</div>
-<div>
-  <a href="#" class="link">Click Me</a>
-</div>
+<div class="app_container"></div>
+
+<script type="text/template" id="tmplt-LogEntries">
+    <ul>
+    </ul>
+</script>
+
+<script type="text/template" id="tmplt-LogEntry">
+      *
+</script>
+
+
