--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,14 +3,21 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Log Reader</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="/css/style.css" />
 </script>
 </head>
 <body>
   <header>
-    <h1>Log Reader</h1>
+    <div class="container">
+      <h1>Log Reader</h1>
+    </div>
   </header>
+  <div class="container">
   <%= yield %>
+  </div>
 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.3.3/underscore-min.js" type="text/javascript"></script>
