--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,18 +4,18 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Log Reader</title>
+  <title>Log Monitor</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" />
   <link rel="stylesheet" href="/css/style.css" />
 </script>
 </head>
 <body>
   <header>
-    <div class="container">
-      <h1>Log Reader</h1>
+    <div class="container-fluid">
+      <h1>Log Monitor</h1>
     </div>
   </header>
-  <div class="container">
+  <div class="container-fluid">
   <%= yield %>
   </div>
 
