--- a/views/index.erb
+++ b/views/index.erb
@@ -19,12 +19,23 @@
 
   <div class="row-fluid">
     <div class="form-group">
-      <label for="log-search" class="control-label">Search</label>
-      <input id="log-search" class="form-control col-md-4" value="" placeholder="Search String" />
+      <label for="log-search" class="control-label">Filter</label>
+      <input id="log-search" class="form-control col-md-4" value="" placeholder="Filter String" />
         <p id="last-line-count"></p>
     </div>
   </div>
+
+  <div class="row-fluid">
+    <div class="form-group">
+      <div class="checkbox">
+        <label>
+          <input type="checkbox" id="pause-refresh" value="true"> Pause Refresh
+        </label>
+      </div>
+    </div>
+  </div>
 </script>
+
 
 <script type="text/template" id="tmplt-LogLines">
   <%% var currentLine = LR.lastLineCount + 1 %>
@@ -38,7 +49,10 @@
           }
       %>
       <%% currentLine-- %>
-      <tr class="<%%=lineState %>"> <td><%%= currentLine %> </td><td> <xmp> <%%= $.trim(line['line']) %> </xmp></td> </tr>
+      <tr class="<%%=lineState %>">
+        <td><%%= currentLine %></td>
+        <td><xmp><%%= $.trim(line['line']) %></xmp></td>
+      </tr>
     <%% }) %>
     </table>
 </script>
