--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,7 +12,7 @@ header {
   margin-bottom: 1%;
 }
 
-xmp {
+pre {
   background: none;
   border: 0;
   padding: 0;
@@ -52,10 +52,26 @@ xmp {
   left: 218px;
   right: 1%;
   top: 111px;
+}
 
+#loader {
+  position: relative;
+  left:47%;
+  top: 200px;
+}
+
+tr.no {
+  display:none;
 }
 
 .logblock td {
   margin:0;
-  padding:0;
+  padding:5px;
+}
+
+.highlight {
+  font-weight: bold;
+  color: red;
+  text-decoration: underline;
+  background-color:yellow;
 }
