--- a/views/layout.erb
+++ b/views/layout.erb
@@ -22,6 +22,8 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.3.3/underscore-min.js" type="text/javascript"></script>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.2/backbone-min.js" type="text/javascript"></script>
+  <script type="text/javascript" src="/vendor/jquery.highlight-5.js"></script>
+
   <script type="text/javascript" src="/js/app.js"></script>
 </body>
 
