--- a/views/index.erb
+++ b/views/index.erb
@@ -39,6 +39,15 @@
       </div>
     </div>
   </div>
+  <div class="row-fluid">
+    <div class="form-group">
+      <div class="checkbox">
+        <label>
+          <input type="checkbox" id="tail-only" value="true"> Tail Only
+        </label>
+      </div>
+    </div>
+  </div>
 </script>
 
 <script type="text/template" id="tmplt-LogComplete">
